# nix-service-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.nix  example.nix  flake.nix  minimal.nix
src/: args.rs  config.rs  daemon.rs  main.rs  sources.rs  webhooks.rs
