[package]
name = "nix-service-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.13", features = ["derive"] }
fork = "0.2.0"
lockfile = "0.4.0"
nix = { version = "0.29.0", features = ["signal"] }
signal-hook = "0.3.17"
